--- a/lecture1/lecture1.ipynb
+++ b/lecture1/lecture1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "editable": true,
     "execution": {
@@ -202,19 +202,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.2342\n"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for ^: 'float' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[32;43m5\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0.6\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m-\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0.5\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m9.81\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0.6\u001b[39;49m\u001b[43m^\u001b[49m\u001b[32;43m2\u001b[39;49m)\n",
+      "\u001b[31mTypeError\u001b[39m: unsupported operand type(s) for ^: 'float' and 'int'"
      ]
     }
    ],
    "source": [
-    "print(5 * 0.6 - 0.5 * 9.81 * 0.6**2)"
+    "print(5 * 0.6 - 0.5 * 9.81 * 0.6^2)"
    ]
   },
   {
@@ -234,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "editable": true,
     "execution": {
@@ -248,7 +252,15 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2342\n"
+     ]
+    }
+   ],
    "source": [
     "v0 = 5\n",
     "g = 9.81\n",
@@ -300,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "editable": true,
     "execution": {
@@ -314,7 +326,15 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2342\n"
+     ]
+    }
+   ],
    "source": [
     "initial_velocity = 5\n",
     "acceleration_of_gravity = 9.81\n",
@@ -340,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "editable": true,
     "execution": {
@@ -354,7 +374,17 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"initial_velocity\".isidentifier())  # snake_case-style variable name\n",
     "print(\"InitialVelocity\".isidentifier())  # CamelCase-style variable name\n",
@@ -399,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "editable": true,
     "execution": {
@@ -413,7 +443,15 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2342\n"
+     ]
+    }
+   ],
    "source": [
     "# Program for computing the height of a ball in vertical motion.\n",
     "v0 = 5  # Set initial velocity in m/s.\n",
@@ -451,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "editable": true,
     "execution": {
@@ -473,16 +511,16 @@
     "inches = metres / 0.0254\n",
     "\n",
     "# Uncomment and complete the following code. Do not change variable names for testing.\n",
-    "# feet =\n",
+    "feet = inches / 12\n",
     "\n",
-    "# yards =\n",
+    "yards = feet/3\n",
     "\n",
-    "# miles ="
+    "miles = yards/1760\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "editable": true,
     "execution": {
@@ -498,7 +536,20 @@
      "pybryt"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REFERENCE: exercise-1_2\n",
+      "SATISFIED: True\n",
+      "MESSAGES:\n",
+      "  - SUCCESS: Your conversion to feet is correct. Well done!\n",
+      "  - SUCCESS: Amazing! Your calculation of yards is correct.\n",
+      "  - SUCCESS: Wow! Your conversion to miles is right.\n"
+     ]
+    }
+   ],
    "source": [
     "with pybryt.check(pybryt_reference(1, 2)):\n",
     "    feet, yards, miles"
@@ -506,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "editable": true,
     "execution": {
@@ -553,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "editable": true,
     "execution": {
@@ -567,7 +618,15 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At t=0.6 s, y is 1.2342 m.\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"At t={t} s, y is {y} m.\")  # f-string method - string literal begins with an f"
    ]
@@ -589,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "editable": true,
     "execution": {
@@ -603,9 +662,17 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At t=0.60 s, y is 1.23 m.\n"
+     ]
+    }
+   ],
    "source": [
-    "print(f\"At t={t:g} s, y is {y:.2f} m.\")  # f-string with specified formatting"
+    "print(f\"At t={t:.2f} s, y is {y:.2f} m.\")  # f-string with specified formatting"
    ]
   },
   {
@@ -623,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "editable": true,
     "execution": {
@@ -637,7 +704,18 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At t=0.600000 s, a ball with\n",
+      "initial velocity v0=5.000E+00 m/s\n",
+      "is located at the height y=1.23 m.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"\"\"At t={t:f} s, a ball with\n",
     "initial velocity v0={v0:.3E} m/s\n",
