--- a/lecture2/lecture2.ipynb
+++ b/lecture2/lecture2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "editable": true,
     "execution": {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "editable": true,
     "execution": {
@@ -296,7 +296,7 @@
        "[6.300000000000001, 299.70000000000005, -30, 6]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "editable": true,
     "execution": {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "editable": true,
     "execution": {
@@ -2042,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 7,
    "metadata": {
     "editable": true,
     "execution": {
@@ -2063,7 +2063,7 @@
        "[]"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2094,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 8,
    "metadata": {
     "editable": true,
     "execution": {
@@ -2839,7 +2839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "editable": true,
     "execution": {
@@ -2855,15 +2855,18 @@
    },
    "outputs": [],
    "source": [
-    "# Uncomment and complete this code - keep the names the same for testing purposes.\n",
-    "\n",
-    "# def h(x):\n",
-    "#     ..."
+    "# Uncomment and complete this code - keep the names the same for testing purposes.i\n",
+    "import numpy as np\n",
+    "from numpy import sin, sqrt, exp, pi\n",
+    "def h(x):\n",
+    "    return (1/sqrt(2*pi)) * exp(-0.5*x**2)\n",
+    "x=np.linspace(-4,4,9)\n",
+    "y=h(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "editable": true,
     "execution": {
@@ -2879,7 +2882,20 @@
      "pybryt"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REFERENCE: exercise-2_8\n",
+      "SATISFIED: True\n",
+      "MESSAGES:\n",
+      "  - SUCCESS: Your function computes h(x)c orrectly. Well done!\n",
+      "  - SUCCESS: Great! You created array x correctly.\n",
+      "  - SUCCESS: Great! You created array y correctly.\n"
+     ]
+    }
+   ],
    "source": [
     "with pybryt.check(pybryt_reference(2, 8)):\n",
     "    h(5), x, y"
@@ -3078,7 +3094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3096,13 +3112,13 @@
    "source": [
     "# Uncomment and complete this code - keep the names the same for testing purposes.\n",
     "\n",
-    "# w = ...\n",
-    "# wbits = ..."
+    "w =np.linspace(0,3,31)\n",
+    "wbits =w[3:30:3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3118,7 +3134,19 @@
      "pybryt"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REFERENCE: exercise-2_9\n",
+      "SATISFIED: True\n",
+      "MESSAGES:\n",
+      "  - SUCCESS: Great! You created array w correctly.\n",
+      "  - SUCCESS: You sliced array w correctly. Amazing!\n"
+     ]
+    }
+   ],
    "source": [
     "with pybryt.check(pybryt_reference(2, 9)):\n",
     "    w, wbits"
@@ -3126,7 +3154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3194,7 +3222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3208,7 +3236,18 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0.]\n",
+      "[[ 0. 12. -1.  5.]\n",
+      " [-1. -1. -1.  0.]\n",
+      " [11.  5.  5. -2.]]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.zeros((3, 4))  # we create a 2-dimensional (3 x 4) array filled with zeros\n",
     "\n",
@@ -3229,7 +3268,8 @@
     "A[0][3] = 5\n",
     "A[1][3] = 0\n",
     "A[2][3] = -2\n",
-    "\n",
+    "x=np.zeros(4)\n",
+    "print(x)\n",
     "print(A)"
    ]
   },
@@ -3248,7 +3288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3262,7 +3302,15 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 32.0], [10, 50.0], [20, 68.0], [30, 86.0], [40, 104.0], [50, 122.0], [60, 140.0], [70, 158.0], [80, 176.0], [90, 194.0], [100, 212.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "Cdegrees = range(0, 101, 10)\n",
     "Fdegrees = [9/5*C + 32 for C in Cdegrees]\n",
@@ -3272,7 +3320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3286,7 +3334,25 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0.  32.]\n",
+      " [ 10.  50.]\n",
+      " [ 20.  68.]\n",
+      " [ 30.  86.]\n",
+      " [ 40. 104.]\n",
+      " [ 50. 122.]\n",
+      " [ 60. 140.]\n",
+      " [ 70. 158.]\n",
+      " [ 80. 176.]\n",
+      " [ 90. 194.]\n",
+      " [100. 212.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Convert this nested list into a NumPy array:\n",
     "table2 = np.array(table)\n",
@@ -3308,7 +3374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3322,7 +3388,15 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "print(table2.shape)"
    ]
@@ -3344,7 +3418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3358,7 +3432,36 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "table2[0, 0] = 0.0\n",
+      "table2[0, 1] = 32.0\n",
+      "table2[1, 0] = 10.0\n",
+      "table2[1, 1] = 50.0\n",
+      "table2[2, 0] = 20.0\n",
+      "table2[2, 1] = 68.0\n",
+      "table2[3, 0] = 30.0\n",
+      "table2[3, 1] = 86.0\n",
+      "table2[4, 0] = 40.0\n",
+      "table2[4, 1] = 104.0\n",
+      "table2[5, 0] = 50.0\n",
+      "table2[5, 1] = 122.0\n",
+      "table2[6, 0] = 60.0\n",
+      "table2[6, 1] = 140.0\n",
+      "table2[7, 0] = 70.0\n",
+      "table2[7, 1] = 158.0\n",
+      "table2[8, 0] = 80.0\n",
+      "table2[8, 1] = 176.0\n",
+      "table2[9, 0] = 90.0\n",
+      "table2[9, 1] = 194.0\n",
+      "table2[10, 0] = 100.0\n",
+      "table2[10, 1] = 212.0\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(table2.shape[0]):\n",
     "    for j in range(table2.shape[1]):\n",
@@ -3380,7 +3483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3394,7 +3497,36 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index (0, 0) has value 0.0\n",
+      "index (0, 1) has value 32.0\n",
+      "index (1, 0) has value 10.0\n",
+      "index (1, 1) has value 50.0\n",
+      "index (2, 0) has value 20.0\n",
+      "index (2, 1) has value 68.0\n",
+      "index (3, 0) has value 30.0\n",
+      "index (3, 1) has value 86.0\n",
+      "index (4, 0) has value 40.0\n",
+      "index (4, 1) has value 104.0\n",
+      "index (5, 0) has value 50.0\n",
+      "index (5, 1) has value 122.0\n",
+      "index (6, 0) has value 60.0\n",
+      "index (6, 1) has value 140.0\n",
+      "index (7, 0) has value 70.0\n",
+      "index (7, 1) has value 158.0\n",
+      "index (8, 0) has value 80.0\n",
+      "index (8, 1) has value 176.0\n",
+      "index (9, 0) has value 90.0\n",
+      "index (9, 1) has value 194.0\n",
+      "index (10, 0) has value 100.0\n",
+      "index (10, 1) has value 212.0\n"
+     ]
+    }
+   ],
    "source": [
     "for index_tuple, value in np.ndenumerate(table2):\n",
     "    print(f\"index {index_tuple} has value {value}\")"
@@ -3415,7 +3547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3429,7 +3561,15 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 32.  50.  68.  86. 104. 122. 140. 158. 176. 194. 212.]\n"
+     ]
+    }
+   ],
    "source": [
     "print(table2[:, 1])  # 2nd column (index 1)"
    ]
@@ -3530,7 +3670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3548,17 +3688,21 @@
    "source": [
     "# Uncomment and complete this code - keep the names the same for testing purposes.\n",
     "\n",
-    "# def multiply(A, b):\n",
-    "#     ...\n",
+    "def multiply(A, b):\n",
+    "    c=np.zeros(A.shape[0])\n",
+    "    for i in range(A.shape[0]):\n",
+    "        for j in range(A.shape[1]):\n",
+    "            c[i]=c[i]+A[i][j]*b[j]\n",
+    "    return c\n",
     "\n",
-    "# A = ...\n",
-    "# b = ...\n",
-    "# c = ..."
+    "A = np.array([[0, 12, -1], [-1, -1, -1], [11, 5, 5]])\n",
+    "b = np.array([-2, 1, 7])\n",
+    "c = multiply(A, b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3574,7 +3718,22 @@
      "pybryt"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REFERENCE: exercise-2_10\n",
+      "SATISFIED: True\n",
+      "MESSAGES:\n",
+      "  - SUCCESS: Your matrix A is correct. Nice!\n",
+      "  - SUCCESS: Your vector b is correct. Nice!\n",
+      "  - SUCCESS: You are populating resulting vector correctly. Amazing!\n",
+      "  - SUCCESS: Great! You created a zero-vector before the loop.\n",
+      "  - SUCCESS: Wow! The result of your multiplication is correct.\n"
+     ]
+    }
+   ],
    "source": [
     "with pybryt.check(pybryt_reference(2, 10)):\n",
     "    A, b, c, multiply(A, b)"
@@ -3639,7 +3798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3653,7 +3812,18 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A = array([[1, 1],\n",
+      "       [2, 1]])\n",
+      "b = array([1, 2])\n",
+      "Ab = array([3, 4])\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.array([[1, 1], [2, 1]])\n",
     "b = np.array([1, 2])\n",
@@ -3695,7 +3865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3709,19 +3879,46 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Function results is \n",
+      "[[ 1.00000000e+00  1.95478650e+06 -3.67879441e-01]\n",
+      " [-3.67879441e-01 -3.67879441e-01 -3.67879441e-01]\n",
+      " [ 6.59947559e+05  8.68065796e+02  8.68065796e+02]]\n",
+      "Direct implementation results \n",
+      " [[ 1.00000000e+00  1.95478650e+06 -3.67879441e-01]\n",
+      " [-3.67879441e-01 -3.67879441e-01 -3.67879441e-01]\n",
+      " [ 6.59947559e+05  8.68065796e+02  8.68065796e+02]]\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Uncomment and complete this code - keep the names the same for testing purposes.\n",
+    "from math import exp\n",
+    "A33 = np.array([\n",
+    "    [0, 12, -1],\n",
+    "    [-1, -1, -1],\n",
+    "    [11, 5, 5]\n",
+    "], dtype=float)\n",
     "\n",
-    "# A33 = ...\n",
-    "\n",
-    "# def f_cubic(A):\n",
-    "#     ..."
+    "def f_cubic(A):\n",
+    "    x=A.copy()\n",
+    "    for i in range(x.shape[0]):\n",
+    "            for j in range(x.shape[1]):\n",
+    "                x[i][j]=x[i][j]**3 + x[i][j]*np.exp(x[i][j]) + 1\n",
+    "    return x\n",
+    "print(f\"Function results is \\n{f_cubic(A33)}\")\n",
+    "print(f\"Direct implementation results \\n {A33**3 + A33*np.exp(A33) + 1}\")\n",
+    "print(np.allclose(f_cubic(A33), A33**3 + A33*np.exp(A33) + 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3737,7 +3934,19 @@
      "pybryt"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REFERENCE: exercise-2_11\n",
+      "SATISFIED: False\n",
+      "MESSAGES:\n",
+      "  - ERROR: Hmmm... The result of your function is wrong.\n",
+      "  - SUCCESS: Your matrix A33 is correct.\n"
+     ]
+    }
+   ],
    "source": [
     "with pybryt.check(pybryt_reference(2, 11)):\n",
     "    f_cubic(np.array([[1, 2, -6], [2, 2, -5]])), A33"
@@ -3745,7 +3954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3761,7 +3970,20 @@
      "nbgrader"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "tuple index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[150]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m np.allclose(f_cubic(A33), np.power(A33, \u001b[32m3\u001b[39m) + np.multiply(A33, np.exp(A33)) + \u001b[32m1\u001b[39m)\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mall\u001b[39m([\u001b[38;5;28misinstance\u001b[39m(i, numbers.Real) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m res.flatten()])\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m np.allclose(\u001b[43mf_cubic\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m, \u001b[32m1\u001b[39m)\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m### END HIDDEN TESTS\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[148]\u001b[39m\u001b[32m, line 12\u001b[39m, in \u001b[36mf_cubic\u001b[39m\u001b[34m(A)\u001b[39m\n\u001b[32m     10\u001b[39m x=A.copy()\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(x.shape[\u001b[32m0\u001b[39m]):\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m         \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[43mx\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m]\u001b[49m):\n\u001b[32m     13\u001b[39m             x[i][j]=x[i][j]**\u001b[32m3\u001b[39m + x[i][j]*np.exp(x[i][j]) + \u001b[32m1\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m x\n",
+      "\u001b[31mIndexError\u001b[39m: tuple index out of range"
+     ]
+    }
+   ],
    "source": [
     "import numbers\n",
     "import numpy as np\n",
@@ -4025,7 +4247,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "introduction-to-python",
    "language": "python",
    "name": "python3"
   },
@@ -4039,7 +4261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
