--- a/lecture2/lecture2.ipynb
+++ b/lecture2/lecture2.ipynb
@@ -3865,7 +3865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 153,
    "metadata": {
     "editable": true,
     "execution": {
@@ -3918,7 +3918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 152,
    "metadata": {
     "editable": true,
     "execution": {
@@ -4043,7 +4043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "metadata": {
     "editable": true,
     "execution": {
@@ -4061,19 +4061,24 @@
    "source": [
     "# Uncomment and complete this code - keep the names the same for testing purposes.\n",
     "\n",
-    "# def f_mult(A, B):\n",
-    "#     if A.shape[1] != B.shape[0]:\n",
-    "#         raise RuntimeError('Matrix A should have the same number of columns as B has rows.')\n",
-    "#     res = np.zeros([A.shape[0], B.shape[1]])\n",
-    "#     ...\n",
-    "#\n",
-    "#\n",
-    "# C = f_mult(A, B)"
+    "def f_mult(A, B):\n",
+    "     if A.shape[1] != B.shape[0]:\n",
+    "         raise RuntimeError('Matrix A should have the same number of columns as B has rows.')\n",
+    "     res = np.zeros([A.shape[0], B.shape[1]])\n",
+    "     for i in range(A.shape[0]):\n",
+    "        for j in range(B.shape[1]):\n",
+    "                for k in range(A.shape[1]):\n",
+    "                     res[i][j]=res[i][j]+(A[i][k]*B[k][j])\n",
+    "     return res\n",
+    "A=np.array([[0,12,-1],[-1,-1,-1],[11,5,5]])\n",
+    "B=np.array([[-2,1,7],[3,0,6],[2,3,5]])\n",
+    "C = f_mult(A, B)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {
     "editable": true,
     "execution": {
@@ -4089,7 +4094,22 @@
      "pybryt"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REFERENCE: exercise-2_12\n",
+      "SATISFIED: True\n",
+      "MESSAGES:\n",
+      "  - SUCCESS: You are populating resulting vector correctly. Amazing!\n",
+      "  - SUCCESS: You created a zero-matrix before looping.\n",
+      "  - SUCCESS: Amazing! Your function computes the multiplication correctly.\n",
+      "  - SUCCESS: Your matrix A is correct.\n",
+      "  - SUCCESS: Your matrix B is correct.\n"
+     ]
+    }
+   ],
    "source": [
     "with pybryt.check(pybryt_reference(2, 12)):\n",
     "    f_mult(np.array([[5, 6], [11, 17]]), np.array([[91, -6], [21, 14]])), A, B"
@@ -4097,7 +4117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {
     "editable": true,
     "execution": {
@@ -4173,18 +4193,34 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  3  5  7  9 11 13]\n",
+      " [15 17 19 21 23 25 27]\n",
+      " [29 31 33 35 37 39 41]\n",
+      " [43 45 47 49 51 53 55]]\n",
+      "[[17 21 25]\n",
+      " [31 35 39]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Uncomment and complete this code - keep the names the same for testing purposes.\n",
     "\n",
-    "# odd = ...\n",
-    "# odd_sq = ...\n",
-    "# odd_bits = ..."
+    "odd =np.array([x for x in range(1,56) if x%2!=0])\n",
+    "odd_sq=np.array([odd[i-7:i] for i in range(7,29,7)])\n",
+    "odd_sq=odd.reshape(4,7)\n",
+    "print(odd_sq)\n",
+    "odd_bits =odd_sq[1:3,1::2]\n",
+    "print(odd_bits)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 268,
    "metadata": {
     "editable": true,
     "execution": {
@@ -4200,7 +4236,20 @@
      "pybryt"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REFERENCE: exercise-2_13\n",
+      "SATISFIED: True\n",
+      "MESSAGES:\n",
+      "  - SUCCESS: Great! The array odd is correct.\n",
+      "  - SUCCESS: You reshaped the array correctly.\n",
+      "  - SUCCESS: Wow! You sliced the array correctly.\n"
+     ]
+    }
+   ],
    "source": [
     "with pybryt.check(pybryt_reference(2, 13)):\n",
     "    odd, odd_sq, odd_bits"
@@ -4208,7 +4257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 269,
    "metadata": {
     "editable": true,
     "execution": {
